kubernetes-monitoring/nginx/ingress.yaml
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: nginx-ingress-monitoring
    annotations:
      kubernetes.io/ingress.class: nginx
      
  spec:
    rules:
     - http:
        paths:
        - path: /basic_status
          backend:
            serviceName: nginx-monitoring
            servicePort: 80
